# castle-engine

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  COPYING.md  COPYING.txt  CastleEngineManifest.xml  Delphinus.Install.json  Jenkinsfile  Jenkinsfile.check-units-dependencies  Jenkinsfile.delphi  Jenkinsfile.macos  Jenkinsfile.non-critical  Jenkinsfile.raspberry-pi  Jenkinsfile.test  Jenkinsfile.update-apidoc-unstable  Jenkinsfile.windows  Makefile  README.md  README.txt  SECURITY.md  boss-lock.json  boss.json  buildTools.ps1  castle-engine-ci.conf  castle-fpc-messages.cfg  castle-fpc.cfg  castleconverttiledmap.pas  fpmake.pp  gameenemy.pas  gameinitialize.pas  gamestatemenu.pas  gamestateplay.pas  kambi.cfg  kambixmlcfg.pas  most_important_lazarus_packages_and_tools.lpg  platformer_v1_standalone.lpi  platformer_v1_standalone.lpr  project1.lpi  (+4 more)
tools/build-tool/data/android/integrated-services/sound/app/src/main/: CMakeLists.txt
tools/build-tool/data/android/integrated-services/sound/app/src/main/jni/: Android.mk
tools/build-tool/data/android/integrated-services/sound/app/src/main/jni/armeabi-v7a/: compile_openal.sh
tools/build-tool/data/android/integrated/app/src/main/: AndroidManifest.xml  CMakeLists.txt
tools/build-tool/data/android/integrated/app/src/main/java/io/castleengine/: AvailableProduct.java  MainActivity.java  ServiceAbstract.java  ServiceMessaging.java  (+2 more)
tools/build-tool/data/android/integrated/app/src/main/jni/: Application.mk
tools/build-tool/data/android/integrated/app/src/main/res/values/: strings.xml  style.xml
(+12161 files in other folders)
