set(ALSOFT_NO_CONFIG_UTIL ON CACHE BOOL "" FORCE)
set(ALSOFT_EXAMPLES OFF CACHE BOOL "" FORCE)
set(ALSOFT_UTILS OFF CACHE BOOL "" FORCE)
set(ALSOFT_TESTS OFF CACHE BOOL "" FORCE)
set(ALSOFT_REQUIRE_OBOE ON CACHE BOOL "" FORCE)
set(ALSOFT_BACKEND_OPENSL ON CACHE BOOL "" FORCE)
set(ALSOFT_EMBED_HRTF_DATA YES CACHE BOOL "" FORCE)

add_subdirectory("cpp/sound/openal-soft/")

unset(ALSOFT_NO_CONFIG_UTIL CACHE)
unset(ALSOFT_EXAMPLES CACHE)
unset(ALSOFT_UTILS CACHE)
unset(ALSOFT_TESTS CACHE)
unset(ALSOFT_REQUIRE_OBOE CACHE)
unset(ALSOFT_BACKEND_OPENSL CACHE)
unset(ALSOFT_EMBED_HRTF_DATA CACHE)

